--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/icone.png">
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="shortcut icon" href="./src/assets/icone.png">
+    <link rel="stylesheet" href="./src/css/estilo.css">
     <title>City Adventures</title>
 </head>
 <body>
+    <header>
+        <a>City Adventure</a>
+        <nav>
+            <ul class="nav-menu">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#" class="btn"><img src="./src/assets/carrinho.png" width="20px" height="20px"></a></li>
+            </ul>
+          </nav>
+    </header>
     
 
 
 
-    <script src="./js/script"></script>
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
