Criando section banner e section cards

--- a/index.html
+++ b/index.html
@@ -19,7 +19,40 @@
             </ul>
           </nav>
     </header>
-    
+    <section class="banner">
+        <div class="imgbanner">
+          <img src="./src/assets/banner.png" alt="imgBanner">
+        </div>
+    </section>
+    <p>Support</p>
+    <h4>Support City Outdoors</h4>
+    <section class="cards">
+        <div class="card">
+            <h3>SHOP PRODUCTS</h3>
+        </div>
+        <div class="card">
+            <h3>DONATE</h3>
+        </div>
+        <div class="card">
+            <h3>BUY GIFT CARDS</h3>
+        </div>
+        <div class="produto">
+            <img src="./src/assets/tenda.jpg" alt="tenda" width="853px" height="1280px">
+            <p>White Tent<br>$ 200.00 USD</p>
+            <p><button id="btnDetail">Details</button></p>
+        </div>
+        <div class="produto">
+            <img src="./src/assets/coffe.jpg" alt="" width="853px" height="1280px">
+            <p>Tin Coffe Tumbler<br>$ 35.00 USD</p>
+            <p><button id="btnDetail">Details</button></p>
+        </div>
+        <div class="produto">
+            <img src="./src/assets/backpack.jpg" alt="" width="853px" height="1280px">
+            <p>Blue Canvas Backpack<br>$ 95.00 USD </p>
+            <p><button id="btnDetail">Details</button></p>
+        </div>
+
+    </section>
 
 
 
