--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
             <p>Blue Canvas Backpack<br>$ 95.00 USD </p>
             <p><button id="btnDetail">Details</button></p>
         </div>
-
     </section>
+    <footer>
+        <div><img src="./src/assets/x-icon.png" alt="x"><img src="./src/assets/facebook-icon.png" alt="facebook"><img src="./src/assets/instagram-icon.png" alt="instagram"></div>
+    
+    
+    </footer>
 
 
 
