--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             </ul>
           </nav>
     </header>
-
     <section class="banner">
         <div class="imgbanner">
           <img src="./src/assets/banner.png" alt="imgBanner">
@@ -41,7 +40,7 @@
         <div class="card">
             <h3>BUY GIFT CARDS</h3>
         </div>
-
+        
         <div class="produto">
             <img src="./src/assets/tenda.jpg" alt="tenda" width="853px" height="1280px">
             <p>White Tent<br>$ 200.00 USD</p>
@@ -60,6 +59,9 @@
             <p><button id="btnDetail">Details</button></p>
         </div>
     </section>
+    <footer>
+        <div><img src="./src/assets/x-icon.png" alt="x"><img src="./src/assets/facebook-icon.png" alt="facebook"><img src="./src/assets/instagram-icon.png" alt="instagram"></div>
+    </footer>
 
     <script src="./src/js/script.js"></script>
 </body>
