--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <div class="imgbanner">
           <img src="./src/assets/banner.png" alt="imgBanner">
         </div>
+        <div class="textoBanner">
+            <span>How we're keeping you safe during COVID-19 As an outdoor shop, we've taken precautionary measures to ensure the safety of all our</span>
+        </div>
+        <button>Read our statement</button>
     </section>
     <p>Support</p>
     <h4>Support City Outdoors</h4>
@@ -54,8 +58,6 @@
     </section>
     <footer>
         <div><img src="./src/assets/x-icon.png" alt="x"><img src="./src/assets/facebook-icon.png" alt="facebook"><img src="./src/assets/instagram-icon.png" alt="instagram"></div>
-    
-    
     </footer>
 
 
