--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <a>City Adventure</a>
         <nav>
             <ul class="nav-menu">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#" class="btn"><img src="./src/assets/carrinho.png" width="20px" height="20px"></a></li>
+              <a href="#">Home</a>
+              <a href="#">About</a>
+              <a href="#">Contact</a>
+              <a href="#" class="btn"><img src="./src/assets/carrinho.png" width="20px" height="20px"></a>
             </ul>
           </nav>
     </header>
@@ -64,7 +64,7 @@
             <p><button id="btnDetail">Details</button></p>
         </div>
     </section>
-    
+
     <footer>
         <div><img src="./src/assets/x-icon.png" alt="x"><img src="./src/assets/facebook-icon.png" alt="facebook"><img src="./src/assets/instagram-icon.png" alt="instagram"></div>
     </footer>
